--- a/composer.json
+++ b/composer.json
@@ -1,5 +1,5 @@
 {
-  "name": "ironman/FrontpageWidget",
+  "name": "ironman/frontpage-widget",
   "description": "A Magento 2 Module for Retail Landing Page Widgets",
   "require": {
     "php": "~5.6.5|7.0.2|7.0.4|~7.0.6|~7.1.0",
